# react-native-awesome-library

./: CONTRIBUTING.md  README.md  package.json  react-native-awesomelibrary.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/java/com/awesomelibrary/: AwesomelibraryModule.java  AwesomelibraryPackage.java
cpp/: react-native-awesomelibrary.cpp  react-native-awesomelibrary.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/src/main/java/com/awesomelibraryexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/AwesomelibraryExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/AwesomelibraryExample.xcodeproj/: project.pbxproj
example/ios/AwesomelibraryExample.xcodeproj/xcshareddata/xcschemes/: AwesomelibraryExample.xcscheme
example/ios/AwesomelibraryExample.xcworkspace/: contents.xcworkspacedata
example/ios/AwesomelibraryExampleTests/: AwesomelibraryExampleTests.m
example/src/: App.tsx
ios/: Awesomelibrary.h  Awesomelibrary.mm
src/: NativeAwesomelibrary.ts  index.tsx
